# open_domain_question_answering

./: .gitignore  README.md  pyproject.toml
mlproject/: train.py  train_reader.py  train_retriever.py  utils.py
mlproject/arguments/: data_arguments.py  model_arguments.py  retrieval_arguments.py  training_arguments.py
mlproject/processing/: postprocessing.py  preprocessing.py
mlproject/reader/: compute.py  trainer_qa.py
mlproject/retriever/: sparse_retrieval.py
mlproject/trainer/: trainer_qa.py
