[tool.poetry]
name = "open-domain-question-answering"
version = "0.1.0"
description = ""
authors = ["wooy0ng <yygg9800@naver.com>"]
readme = "README.md"
packages = [{include = "open_domain_question_answering"}]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.28.1"
datasets = "^2.11.0"
torch = "^2.0.0"
evaluate = "^0.4.0"
scikit-learn = "^1.2.2"
faiss-cpu = "^1.7.4"
simple-spinner = "^0.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
